--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+#
+#Adding some spring-data-rest properties.
+#
+spring.data.rest.base-path=/basketball-api
