Commenting out the path change for resources. Changed the default page size.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=springstudent
 #Adding some spring-data-rest properties.
 #
 spring.data.rest.base-path=/basketball-api
+spring.data.rest.default-page-size=20
